<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cmpe277.myapp.MainActivity" >


    <TextView
        android:id="@+id/loginNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"  
        android:layout_marginLeft="18dp"
        android:textColor="#000000"
        android:text="@string/login_name" 
        android:textAppearance="?android:attr/textAppearanceMedium" />
       
    <EditText
        android:id="@+id/loginEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="46dp"
        android:layout_toRightOf="@+id/loginNameTextView"
        android:background="#FFFFFF"
        android:inputType="textEmailAddress" />
     <requestFocus />
    
    <TextView
        android:id="@+id/passwdTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="35dp"
        android:layout_below="@id/loginNameTextView"  
        android:text="@string/password" 
        android:textAppearance="?android:attr/textAppearanceMedium" />
       
    <EditText
        android:id="@+id/passwdEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/loginEditText"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/passwdTextView"
        android:background="#FFFFFF"
        android:inputType="textPassword" />
    
     <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loginNameTextView"
        android:layout_below="@+id/passwdEditText"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="82dp"
        android:background="@color/grey"
        android:ems="5"
        android:text="@string/login_button"
        android:textColor="#FFFFFF" 
        android:onClick="onLogin"/>

    <Button
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/loginButton"
        android:layout_alignBottom="@+id/loginButton"
        android:layout_alignRight="@+id/passwdEditText"
        android:layout_marginRight="10dp"
        android:background="@color/grey"
        android:ems="5"
        android:textColor="#FFFFFF"
        android:text="@string/signup_button" 
        android:onClick="onSignUp" />
    

</RelativeLayout>
